
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FastPlayScreen" >

    <LinearLayout
        android:id="@+id/layout_menu2_row1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnChooseIMGFolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fastPlayScreenOnClick"
            android:text="@string/choose_img_folder" />

        <Button
            android:id="@+id/btnBackgroundMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fastPlayScreenOnClick"
            android:text="@string/background_music" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_menu2_row2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAddEffect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fastPlayScreenOnClick"
            android:text="@string/add_effect" />

        <Button
            android:id="@+id/btnDelayTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fastPlayScreenOnClick"
            android:text="@string/delay_time" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_menu2_row3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <LinearLayout
        android:id="@+id/layout_menu2_row3_column1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        
            <ImageButton
            android:id="@+id/ibtnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />
        
        </LinearLayout>

        <LinearLayout
        android:id="@+id/layout_menu2_row3_column2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
            
            <ImageButton
            android:id="@+id/ibtnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />
            
        </LinearLayout>

        <LinearLayout
        android:id="@+id/layout_menu2_row3_column3"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
            
            <ImageButton
            android:id="@+id/ibtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />
            
        </LinearLayout>     
        
    </LinearLayout>

</LinearLayout>